# Reminder_App

./: Cargo.toml
reminder_api/: Cargo.toml
reminder_api/src/: lib.rs
reminder_gui/: Cargo.toml
reminder_gui/src/: main.rs  output.json  tempCodeRunnerFile.rs
