[package]
name = "reminder_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.188", features = ["derive"]}
serde_json = {version = "1.0.105"}
chrono = {version = "0.4.30", features = ["serde"]}
notify-rust = {version = "4.9.0"}

